# briefex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ghcr-publish.yml  lint.yml
migrations/: env.py
migrations/versions/: b84af34d4c2f_initial.py  bf7c8153775a_init.py
scripts/: seed.py
src/briefex/config/: config.py
src/briefex/core/: container.py
src/briefex/crawler/: __init__.py  base.py  crawler.py  exceptions.py  factory.py  models.py
src/briefex/crawlers/: __init__.py  base.py  crawler.py  exceptions.py  factory.py
src/briefex/intelligence/: __init__.py  exceptions.py
src/briefex/llm/: __init__.py  base.py  completion.py  exceptions.py  factory.py  models.py  registry.py  sber.py  stub.py  yandex.py
src/briefex/storage/: __init__.py  base.py  exceptions.py  factory.py  models.py  (+4 more)
src/config/: __init__.py  config.py
src/core/: __init__.py  container.py  mappings.py
src/crawlers/: __init__.py  base.py  crawler.py  exceptions.py  factory.py  models.py  utils.py
src/database/: __init__.py  engine.py  exceptions.py  models.py  session.py
src/intelligence/: __init__.py  exceptions.py
src/llm/: __init__.py  base.py  completion.py  exceptions.py  factory.py  models.py  registry.py  yandex.py
src/storage/: __init__.py  base.py  exceptions.py  factory.py  models.py  post.py  registry.py  session.py  source.py
src/workflows/: __init__.py  base.py  crawl.py  summarize.py
(+79 files in other folders)
