[tool.poetry]
name = "briefex"
version = "0.1.0"
description = ""
authors = ["knvovk <knvovk@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
poetry-core = "^2.1.3"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.5"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
requests = "^2.32.4"
numpy = "^2.3.0"
sqlalchemy = "^2.0.41"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"
alembic = "^1.16.1"
pgvector = "^0.4.1"
yandex-cloud-ml-sdk = "^0.12.0"
gigachat = "^0.1.40"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^5.13.2"
notebook = "^7.4.3"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
